--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+@layer components {
+    .section-layout{
+        @apply ss:px-16 sm:py-10 px-16 py-6
+    }
+    .social-icon{
+         @apply rounded-full border-[0.5px] border-[#241915] p-[8px] m-1 cursor-pointer hover:bg-[#241915] duration-300
+    }
+    .social-icon2{
+        @apply rounded-full border-[0.5px] border-[#313030b0] p-[8px] m-1 cursor-pointer hover:bg-[#313030b0] duration-300
+    }
+}
