--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @layer components {
     .section-layout{
-        @apply ss:px-16 sm:py-10 px-16 py-6
+        @apply sm:px-16 sm:py-10 px-4 py-6
     }
     .social-icon{
          @apply rounded-full border-[0.5px] border-[#241915] p-[8px] m-1 cursor-pointer hover:bg-[#241915] duration-300
